<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.eim.lab03.phonedialer.PhoneDialerActivity">

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:enabled="false"
        android:textAlignment="center"
        android:gravity="center"/>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="8">

        <ImageButton
            android:id="@+id/backspace_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="0"
            android:background="@null"
            android:src="@drawable/backspace" />

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_row="1"
            android:layout_column="0"/>

        <Button
            android:id="@+id/number_1_button"
            android:text="@string/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="2" />

        <Button
            android:id="@+id/number_2_button"
            android:text="@string/num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="2" />

        <Button
            android:id="@+id/number_3_button"
            android:text="@string/num3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="2" />

        <Button
            android:id="@+id/number_4_button"
            android:text="@string/num4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="3" />

        <Button
            android:id="@+id/number_5_button"
            android:text="@string/num5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="3" />

        <Button
            android:id="@+id/number_6_button"
            android:text="@string/num6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="3" />

        <Button
            android:id="@+id/number_7_button"
            android:text="@string/num7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="4" />

        <Button
            android:id="@+id/number_8_button"
            android:text="@string/num8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="4" />

        <Button
            android:id="@+id/number_9_button"
            android:text="@string/num9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="4" />

        <Button
            android:id="@+id/star_button"
            android:text="@string/star"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="center"
            android:layout_row="5" />

        <Button
            android:id="@+id/number_0_button"
            android:text="@string/num0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_gravity="center"
            android:layout_row="5" />

        <Button
            android:id="@+id/pound_button"
            android:text="@string/pound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="2"
            android:layout_gravity="center"
            android:layout_row="5" />

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_row="6"
            android:layout_column="0"/>

        <ImageButton
            android:id="@+id/call_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="0"
            android:layout_row="7"
            android:src="@drawable/call" />


        <ImageButton
            android:id="@+id/hangup_image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_column="2"
            android:layout_row="7"
            android:src="@drawable/hangup" />


    </GridLayout>



</LinearLayout>